tests/spec/compile-fail/080_extern_non_c_type.zn
// category: compile-fail
// profile: hosted
// trust.ffi: true
// purpose: C ABI imports require C-compatible signatures

module tests.fail.externNonCType;

trust extern "C" fn fill(buffer: Vector<U8>) -> I32;
// expected-error: Vector is not C-compatible in extern C signature
